fixed z-index now fancybox overlap all window

--- a/resources/css/jquery.fancybox.css
+++ b/resources/css/jquery.fancybox.css
@@ -188,6 +188,7 @@
 .fancybox-lock .fancybox-overlay {
 	overflow: auto;
 	overflow-y: scroll;
+	z-index:10000001;
 }
 
 /* Title helper */
